src/objects/UniqueEntry__FieldMap__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Identifier__c</fullName>
        <label>Identifier</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Target__c</fullName>
        <label>Target</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Type__c</fullName>
        <label>Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>FieldMap</label>
    <listViews>
        <fullName>UniqueEntry__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FieldMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>